--- a/templates/default_fso_email_template.html
+++ b/templates/default_fso_email_template.html
@@ -16,7 +16,7 @@ Please send a starter kit to the following meeting:
     <tbody>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Group Name</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:meeting_name}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:name}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Submitter Name</td>
