subject line customisation

--- a/templates/default_submitter_email_template.html
+++ b/templates/default_submitter_email_template.html
@@ -1,5 +1,4 @@
-<p><br>Thank you for submitting the online meeting update.<br>We will usually be able action your
-    request within 48 hours.<br>Our process also updates NA websites around Australia and at NA World Services.<br>
+<p><br>Thank you for submitting the online meeting update.
 </p>
 <hr>What was submitted: <br><br>
 <table class="blueTable" style="border: 1px solid #1C6EA4;background-color: #EEEEEE;text-align: left;border-collapse: collapse;">
@@ -14,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        {field:submission}
+{field:submission}
     </tbody>
 </table>
 
